HW3-bonus. Fixed

--- a/Practice/HW3-bonus/index.html
+++ b/Practice/HW3-bonus/index.html
@@ -7,65 +7,60 @@
 </head>
 
 <body>
-    <div class="wraper">
+    <div class="hw3-bonus_wrapper">
         <!--HEADER-->
         <div class="header">
-
-            <div class="contacts">
-                <div class="contact_us txt">Contact Us</div>
-                <div class="contact_info txt">+12 34 567 8910</div>
-                <div class="contact_info txt">info@asia-holidays.com</div>
+            <div class="header_logo">
+                <div class="header__slogan"> Путешествия по Азии</div>
             </div>
-            <div class="logo"><img src="img/logo.png" alt=""></div>
+            <div class="header__contacts">
+                <div class="contact_us">Contact Us</div>
+                <div class="contact_info">+12 34 567 8910</div>
+                <div class="contact_info">info@asia-holidays.com</div>
+            </div>
+
+
         </div>
 
         <!--COUNTRIES-->
-        <div class="countries">
-            <div class="country">
+        <div class="country_wrapper">
+            <div>
                  <img src="img/india.jpg" class="frame" alt="India">
-                 <div class="country_name txt India">India</div>
+                 <div class="country_name country_name--india">India</div>
             </div>
 
-            <div class="country">
+            <div>
                     <img src="img/nepal.jpg" class="frame" alt="Nepal">
-                 <div class="country_name txt Nepal">Nepal</div>
+                 <div class="country_name country_name--nepal">Nepal</div>
             </div>
 
-             <div class="country">
+             <div >
                  <img src="img/tibet.jpg" class="frame" alt="Tibet">
-                 <div class="country_name txt Tibet">Tibet</div>
+                 <div class="country_name country_name--tibet">Tibet</div>
              </div>
 
-             <div class="country">
+             <div >
                  <img src="img/buthan.jpg" class="frame" alt="Bhutan">
-                 <div class="country_name txt Bhutan">Bhutan</div>
+                 <div class="country_name country_name--bhutan">Bhutan</div>
              </div>
 
-            <div class="country">
+            <div>
                  <img src="img/sri_lanka.jpg" class="frame" alt="Sri Lanka">
-                 <div class="country_name txt Sri_Lanka">Sri Lanka</div>
+                 <div class="country_name country_name--sri_lanka">Sri Lanka</div>
             </div>
 
-            <div class="country">
+            <div>
                 <img src="img/maldives.jpg" class="frame" alt="Maldives">
-                <div class="country_name txt Maldives">Maldives</div>
+                <div class="country_name country_name--maldives">Maldives</div>
             </div>
         </div>
 
         <!--COPYRIGHT-->
-        <div class="copyright txt">Copyright (c) asia-holidays.com. 2010</div>
+        <div class="footer__copyright">Copyright (c) asia-holidays.com. 2010</div>
     </div>
 
 </body>
 
 
-<!--
-1. Классы с маленькой буквы
-2. разобраться с txt
-3. разобраться с кантриес
-4. разобраться с врапером
-5. слоган текстом
-6. обернуть 3 кантри в блок и установить общий марджин
-7. вернуть копирайт в поток и отодвинуть его марджином на нужное расстояние
-8. убрать высоту у общего контейнера и регулировать высоту страницы высотой блоков внутри
--->
+
+
