--- a/Practice/HW4/index.html
+++ b/Practice/HW4/index.html
@@ -10,33 +10,33 @@
  <div class="wraper">
     <!--HEADER-->
     <div class="header clearfix">
-        <div class="contacts">
+        <div class="header__contacts">
             <div class="contact_us">Наши контакты:</div>
-            <div class="contact_info">+9-098-765-4321 <br>
-                                      +9-0123-456-890 <br>
-                                      info@asia-holidays.com
-            </div>
+            <div class="contact_info">+9-098-765-4321 </div>
+            <div class="contact_info"> +9-0123-456-890 </div>
+            <div class="contact_info"> info@asia-holidays.com</div>
+
         </div>
 
-        <div class="logo"><img src="img/logo.png" alt=""></div>
+        <div class="logo">Путешествия по Азии</div>
 
-        <ul class="countries">
-            <li class="country"><a href="#" class="country_flag Maldives">Мальдивы</a></li>
-            <li class="country"><a href="#" class="country_flag Sri_Lanka">Шри-Ланка</a></li>
-            <li class="country"><a href="#" class="country_flag Bhutan">Бутан</a></li>
-            <li class="country"><a href="#" class="country_flag Tibet">Тибет</a></li>
-            <li class="country"><a href="#" class="country_flag Nepal">Непал</a></li>
-            <li class="country"><a href="#" class="country_flag India">Индия</a></li>
+        <ul class="countries__wrapper">
+            <li class="country"><a href="#" class="country_flag maldives">Мальдивы</a></li>
+            <li class="country"><a href="#" class="country_flag sri_lanka">Шри-Ланка</a></li>
+            <li class="country"><a href="#" class="country_flag bhutan">Бутан</a></li>
+            <li class="country"><a href="#" class="country_flag tibet">Тибет</a></li>
+            <li class="country"><a href="#" class="country_flag nepal">Непал</a></li>
+            <li class="country"><a href="#" class="country_flag india">Индия</a></li>
         </ul>
     </div>
 
-    <div class="photo">
-        <img src="img/photo.jpg" alt="">
+    <div >
+        <img class="photo"  src="img/photo.jpg" alt="">
     </div>
 
     <ul class="main_menu">
-         <li><a href="#" class="menu_name">Главная</a></li>
-         <li><a href="#" class="menu_name down">Путешествие</a>
+         <li class="main_menu__item"><a href="#" class="menu_name">Главная</a></li>
+         <li class="main_menu__item"><a href="#" class="menu_name down">Путешествие</a>
              <ul class="submenu">
                  <li><a href="#" class="menu_name submenu_name">Путешествие1</a></li>
                  <li><a href="#" class="menu_name submenu_name">Путешествие2</a></li>
@@ -45,14 +45,14 @@
                  <li><a href="#" class="menu_name submenu_name">Путешествие5</a></li>
              </ul>
          </li>
-         <li><a href="#" class="menu_name down">Услуги</a>
+         <li class="main_menu__item"><a href="#" class="menu_name down">Услуги</a>
              <ul class="submenu">
                  <li><a href="#" class="menu_name submenu_name">Услуги1</a></li>
                  <li><a href="#" class="menu_name submenu_name">Услуги2</a></li>
                  <li><a href="#" class="menu_name submenu_name">Услуги3</a></li>
              </ul>
          </li>
-         <li><a href="#" class="menu_name down">Партнерам</a>
+         <li class="main_menu__item"><a href="#" class="menu_name down">Партнерам</a>
              <ul class="submenu">
                  <li><a href="#" class="menu_name submenu_name">Партнерам1</a></li>
                  <li><a href="#" class="menu_name submenu_name">Партнерам2</a></li>
@@ -60,16 +60,16 @@
                  <li><a href="#" class="menu_name submenu_name">Партнерам4</a></li>
              </ul>
          </li>
-         <li><a href="#" class="menu_name">Отзывы клиентов</a></li>
-         <li><a href="#" class="menu_name">О нас</a></li>
-         <li><a href="#" class="menu_name">Контакты</a></li>
+         <li class="main_menu__item"><a href="#" class="menu_name">Отзывы клиентов</a></li>
+         <li class="main_menu__item"><a href="#" class="menu_name">О нас</a></li>
+         <li class="main_menu__item"><a href="#" class="menu_name">Контакты</a></li>
      </ul>
 
 
      <!--CENTRAL PART-->
     <div class="central clearfix">
         <div class="column left_column">
-            <div class="title">Информация</div>
+            <div class="column__title">Информация</div>
             Lorem ipsum dolor sit amet
             Lorem ipsum dolor sit amet
             Lorem ipsum dolor sit amet
@@ -81,7 +81,7 @@
         </div>
 
         <div class="column right_column">
-            <div class="title">Новости</div>
+            <div class="column__title">Новости</div>
                 Lorem ipsum dolor sit amet
                 Lorem ipsum dolor sit amet
                 Lorem ipsum dolor sit amet
@@ -103,7 +103,7 @@
  </div>
 
 <!--COPYRIGHT-->
-  <div class="copyright txt">Copyright (c) asia-holidays.com. 2010</div>
+  <div class="copyright">Copyright (c) asia-holidays.com. 2010</div>
  <p>
      <a href="http://jigsaw.w3.org/css-validator/check/referer">
          <img style="border:0;width:88px;height:31px"
@@ -112,10 +112,3 @@
      </a>
  </p>
 </body>
-
-<!--
-1. убрать селекторы по элементу из цсс поставить классы
-2. исправить логотип
-3. исправить <br/>on <span>
-4. убрать высоту блоков и управлять высотой потока с помощью маргинов внтри лежщих блоков
--->
