--- a/Practice/HW5/index.html
+++ b/Practice/HW5/index.html
@@ -3,6 +3,7 @@
     <title>Home Work 4</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -14,31 +15,31 @@
             </div>
             <div class="ofers"><a href="#" class="ofertas">Minhas Ofertas</a></div>
             <ul class="main_menu">
-                <li class="main_menu-YouBike"><a href="#" class="menu_name">Meu YouBike</a></li>
-                <li class="main_menu-Vender"><a href="#" class="menu_name">Vender</a></li>
-                <li class="main_menu-Forum"><a href="#" class="menu_name">Forum</a> </li>
-                <li class="main_menu-Contato"><a href="#" class="menu_name">Contato</a></li>
-                <li class="main_menu-Ajuda"><a href="#" class="menu_name">Ajuda</a></li>
+                <li class="main_menu-youBike"><a href="#" class="menu_name">Meu YouBike</a></li>
+                <li class="main_menu-vender"><a href="#" class="menu_name">Vender</a></li>
+                <li class="main_menu-forum"><a href="#" class="menu_name">Forum</a> </li>
+                <li class="main_menu-contato"><a href="#" class="menu_name">Contato</a></li>
+                <li class="main_menu-ajuda"><a href="#" class="menu_name">Ajuda</a></li>
             </ul>
         </div>
         
     <!--REGISTRATION-->
-        <div class="conteiner">
-            <div class="Cadastre">
-                <div class="Cadastre_header">Cadastre-se</div>
-                <div class="Cadastre_form">
+        <div class="registration__wrapper">
+            <div class="registration">
+                <div class="registration__header">Cadastre-se</div>
+                <div class="registration__form">
                     <a class="facebook_lolin" href="#"><img src="img/Registration_Facebook-login.png" alt="Registration from Facebook"></a>
-                    <div class="OU">OU</div>
+                    <div class="registration__divide-box">OU</div>
                     <form action="/" class="reg_form">
-                        <input type="text" name="first_name" placeholder="First Name" class="reg_field">
-                        <input type="text" name="last_name" placeholder="Last Name" class="reg_field">
-                        <input type="email" name="email" placeholder="Email Address" class="reg_field">
-                        <input type="password" name="passwodr" placeholder="Choose Password" class="reg_field">
-                        <input type="password" name="passwodr_confirm" placeholder="Password Confirm" class="reg_field">
-                        <label class="subscribe">
+                        <input type="text" name="first_name" placeholder="First Name" class="registration__reg_field">
+                        <input type="text" name="last_name" placeholder="Last Name" class="registration__reg_field">
+                        <input type="email" name="email" placeholder="Email Address" class="registration__reg_field">
+                        <input type="password" name="passwodr" placeholder="Choose Password" class="registration__reg_field">
+                        <input type="password" name="passwodr_confirm" placeholder="Password Confirm" class="registration__reg_field">
+                        <label class="registration__subscribe-checkbox">
                             <input type="checkbox" name="subscribe" > Send me YouBike updates and tips
                         </label>
-                        <input type="submit" value="Create my Account" class="submit">
+                        <input type="submit" value="Create my Account" class="registration__submit-button">
                         <div class="agree">By clicking the button above, you agree to the Terms of Service
                             Xiew our Privacy Policy.</div>
                     </form>
@@ -49,9 +50,9 @@
 </body>
 
 <!--
-1. вынести фонты в отдельный цсс файл
-2. изменить классы с большой буквы на классы с маленькими буквами
-3. заменить ОУ на что-то вменяемое
+1.
+2.
+3.
 4. убрать высоту, распереть поток маргинами между блоками
 5. разобраться с бекграундом
 6. заливка кнопка
