HW6. Finished search boxes

--- a/Practice/HW6/index.html
+++ b/Practice/HW6/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/search.css">
 </head>
 
 <body>
@@ -21,26 +22,26 @@
                     <a href="#" class="fogot_psw">забыли пароль?</a>
             </div>
             <div class="navi">
-                <a href="#" class="home"><img src="img/header_info_navi_home.png"></a>
-                <a href="#" class="map"><img src="img/header_info_navi_map.png"></a>
-                <a href="mailto:someone@example.com?Subject=Hello%20again" class="email"><img src="img/header_info_navi_email.png"></a>
+                <a href="#" class="home"><img src="img/header_info_navi_home.png" alt="home page"></a>
+                <a href="#" class="map"><img src="img/header_info_navi_map.png" alt="site map"></a>
+                <a href="mailto:someone@example.com?Subject=Hello%20again" class="email"><img src="img/header_info_navi_email.png" alt="email"></a>
             </div>
         </div>
 
-        <img src="img/header_logo.jpg" alt="" class="logo">
+        <img src="img/header_logo.jpg" alt="header_picture" class="logo">
 
         <div class="header_menu">
             <nav>
                 <ul class="main_menu">
-                    <li class=""><a href="#" class="main_menu-item about_company">о компании</a></li>
-                    <li class=""><a href="#" class="main_menu-item payment">оплата</a></li>
-                    <li class=""><a href="#" class="main_menu-item ship">доставка</a></li>
-                    <li class=""><a href="#" class="main_menu-item articles">статьи</a></li>
-                    <li class=""><a href="#" class="main_menu-item contacts">контакты</a></li>
+                    <li class="main_menu__item"><a href="#" class="main_menu__link about_company">о компании</a></li>
+                    <li class="main_menu__item"><a href="#" class="main_menu__link payment">оплата</a></li>
+                    <li class="main_menu__item"><a href="#" class="main_menu__link ship">доставка</a></li>
+                    <li class="main_menu__item"><a href="#" class="main_menu__link articles">статьи</a></li>
+                    <li class="main_menu__item"><a href="#" class="main_menu__link contacts">контакты</a></li>
                 </ul>
             </nav>
             <div class="korzina">
-                <a href="#" class="korzina_pict"><img src="img/header_menu_korzina.png"></a> <span class="commodity">товаров: </span><a href="#" class="quantity">0</a>
+                <a href="#" class="korzina_pict"><img src="img/header_menu_korzina.png" alt="basket"></a> <span class="commodity">товаров: </span><a href="#" class="quantity">0</a>
                 <span class="sum_text">на сумму:</span> <span class="sum">0,00 грн.</span>
             </div>
         </div>
@@ -48,19 +49,18 @@
 
     <div class="search_wrapper">
         <section class="search_box search_box--po-avto">
-            <div class="search_box__name search_box__name-po-avto">Поиск по автомобилю</div>
+            <h2 class="search_box__name search_box__name-po-avto">Поиск по автомобилю</h2>
             <div class="search_box__name search_box__name-po-avto--discs">Диски:</div>
 
             <form class="search_options">
                 <dl class="search_options__list">
                     <dt class="search_options_item">
                             <span class="search_options__name search_options__name--marka">Марка</span>
-                            <span class="search_options__subname search_options__name--marka_subname"> авто:</span>
+                            <span class="search_options__subname search_options__subname--marka"> авто:</span>
                     </dt>
 
                     <dd class="search_options_variant">
                         <select name="marka" class="search_options_variant_select">
-                            <option value="none"></option>
                             <option value="audi">audi</option>
                             <option value="bentley">bentley</option>
                         </select>
@@ -68,11 +68,10 @@
 
                     <dt class="search_options_item">
                         <span class="search_options__name search_options__name--model">Модель</span>
-                        <span class="search_options__subname search_options__name--model_subname">автомобиля:</span>
+                        <span class="search_options__subname search_options__subname--model">автомобиля:</span>
                     </dt>
                     <dd class="search_options_variant">
                         <select name="model" class="search_options_variant_select search_options_variant--model">
-                            <option value="none"></option>
                             <option value="a6">A6</option>
                             <option value="a7">A7</option>
                         </select>
@@ -80,11 +79,10 @@
 
                     <dt class="search_options_item">
                             <span class="search_options__name search_options__name--year">Год выпуска</span>
-                            <span class="search_options__subname search_options__name--year_subname"> автомобиля:</span>
+                            <span class="search_options__subname search_options__subname--year"> автомобиля:</span>
                     </dt>
                     <dd class="search_options_variant">
                         <select name="year" class="search_options_variant_select search_options_variant--year">
-                            <option value="none"></option>
                             <option value="2000">2000</option>
                             <option value="2010">2010</option>
                         </select>
@@ -95,7 +93,6 @@
                     </dt>
                     <dd class="search_options_variant">
                         <select name="komplect" class="search_options_variant_select search_options_variant--komplect">
-                            <option value="none"></option>
                             <option value="basic">Basic</option>
                             <option value="Full">Full</option>
                         </select>
@@ -108,12 +105,12 @@
                 <dl class="search_options__list">
                     <dt class="search_options_item">
                             <span class="search_options__name search_options__name--marka">Марка</span>
-                            <span class="search_options__subname search_options__name--marka_subname"> авто:</span>
+                            <span class="search_options__subname search_options__subname--marka"> авто:</span>
                     </dt>
 
                     <dd class="search_options_variant">
                         <select name="marka" class="search_options_variant_select">
-                            <option value="none"></option>
+
                             <option value="audi">audi</option>
                             <option value="bentley">bentley</option>
                         </select>
@@ -121,11 +118,11 @@
 
                     <dt class="search_options_item">
                             <span class="search_options__name search_options__name--model">Модель</span>
-                            <span class="search_options__subname search_options__name--model_subname">автомобиля:</span>
+                            <span class="search_options__subname search_options__subname--model">автомобиля:</span>
                     </dt>
                     <dd class="search_options_variant">
                         <select name="model" class="search_options_variant_select search_options_variant--model">
-                            <option value="none"></option>
+
                             <option value="a6">A6</option>
                             <option value="a7">A7</option>
                         </select>
@@ -133,11 +130,11 @@
 
                     <dt class="search_options_item">
                             <span class="search_options__name search_options__name--year">Год выпуска</span>
-                            <span class="search_options__subname search_options__name--year_subname"> автомобиля:</span>
+                            <span class="search_options__subname search_options__subname--year"> автомобиля:</span>
                     </dt>
                     <dd class="search_options_variant">
                         <select name="year" class="search_options_variant_select search_options_variant--year">
-                            <option value="none"></option>
+
                             <option value="2000">2000</option>
                             <option value="2010">2010</option>
                         </select>
@@ -148,7 +145,7 @@
                     </dt>
                     <dd class="search_options_variant">
                         <select name="komplect" class="search_options_variant_select search_options_variant--komplect">
-                            <option value="none"></option>
+
                             <option value="basic">Basic</option>
                             <option value="Full">Full</option>
                         </select>
@@ -156,13 +153,11 @@
                 </dl>
             </form>
 
-
-
             <a href="#" class="search_link">поиск...</a>
         </section>
 
         <section class="search_box search_box--tires">
-            <div class="search_box__name search_box__name--tires">поиск шин</div>
+            <h2 class="search_box__name search_box__name--tires">поиск шин</h2>
 
             <form class="search_options">
 
@@ -180,9 +175,9 @@
                         <span>/</span>
 
                         <select name="width1" class="search_options_variant_select search_options_variant--width">
-                        <option value="none"></option>
-                        <option value="141">141</option>
-                        <option value="151">151</option>
+
+                            <option value="141">141</option>
+                            <option value="151">151</option>
                         </select>
 
                     </dd>
@@ -202,49 +197,123 @@
                         <span class="search_options__name search_options__name--seazon">Сезон:</span>
                     </dt>
                     <dd class="search_options_variant">
-                        <input type="checkbox" name="summer" class="search_options_variant--summer">
+                        <label>
+                            <input type="checkbox" name="summer" class="search_options_variant--summer">
                             <span class="search_options_variant__checkbox search_options_variant__checkbox--summer">лето</span>
-                        </input>
-                        <input type="checkbox" name="winter" class="search_options_variant--winter">
+                        </label>
+
+                        <label>
+                            <input type="checkbox" name="winter" class="search_options_variant--winter">
                             <span class="search_options_variant__checkbox search_options_variant__checkbox--winter">зима</span>
-                        </input>
-                        <input type="checkbox" name="vsesez" class="search_options_variant--vsesez">
+                        </label>
+
+                        <label>
+                            <input type="checkbox" name="vsesez" class="search_options_variant--vsesez">
                             <span class="search_options_variant__checkbox search_options_variant__checkbox--vsesez">всесез</span>
-                        </input>
+                        </label>
                     </dd>
                 </dl>
-            </form>
-
-
-
-
-
-
             </form>
 
             <a href="#" class="search_link search_link-tires">поиск...</a>
         </section>
 
         <section class="search_box search_box--discs">
-            <div class="search_box__name search_box__name--discs">поиск дисков</div>
+            <h2 class="search_box__name search_box__name--discs">поиск дисков</h2>
 
+            <form class="search_options">
+                <dl class="search_options__list">
+                    <dt class="search_options_item search_options_item--discs">
+                        <span class="search_options__name search_options__name--diametr">Диаметр</span>
+                        <span class="search_options__subname search_options__subname--diametr"> диска:</span>
+                    </dt>
+
+                    <dd class="search_options_variant">
+                        <select name="marka" class="search_options_variant_select search_options_variant--diametr">
+                            <option value="14" selected>14</option>
+                            <option value="15">15</option>
+                            <option value="16">16</option>
+                        </select>
+                    </dd>
+
+                    <dt class="search_options_item">
+                        <span class="search_options__name search_options__name--quantity">Количество</span>
+                        <span class="search_options__subname search_options__subname--quantity">крепежных</span>
+                        <span class="search_options__subname search_options__subname--quantity2">отверстий:</span>
+                    </dt>
+                    <dd class="search_options_variant">
+                        <select name="model" class="search_options_variant_select search_options_variant--quantity">
+                            <option value="2">2</option>
+                            <option value="3" selected>3</option>
+                            <option value="4">4</option>
+                        </select>
+                    </dd>
+
+                    <dt class="search_options_item">
+                        <span class="search_options__name search_options__name--diametr-layout">Диаметр</span>
+                        <span class="search_options__subname search_options__subname--diametr-layout">расположения</span>
+                        <span class="search_options__subname search_options__subname--diametr-layout2">крепежных</span>
+                        <span class="search_options__subname search_options__subname--diametr-layout3">отверстий:</span>
+                    </dt>
+                    <dd class="search_options_variant">
+                        <select name="year" class="search_options_variant_select search_options_variant--diametr-layout">
+                            <option value="12" selected>12</option>
+                            <option value="13">13</option>
+                            <option value="14">14</option>
+                        </select>
+                    </dd>
+                </dl>
+
+                <dl class="search_options__list">
+                    <dt class="search_options_item">
+                        <span class="search_options__name search_options__name--dco">ДЦО</span>
+                        <span class="search_options__subname search_options__subname--dco">(диаметр</span>
+                        <span class="search_options__subname search_options__subname--dco2">центрального</span>
+                        <span class="search_options__subname search_options__subname--dco3">отверстия):</span>
+                    </dt>
+                    <dd class="search_options_variant">
+                        <select name="year" class="search_options_variant_select search_options_variant--dco">
+                            <option value="12" selected>12</option>
+                            <option value="13">13</option>
+                            <option value="14">14</option>
+                        </select>
+                    </dd>
+
+                    <dt class="search_options_item">
+                        <span class="search_options__name search_options__name--et">ЕТ</span>
+                        <span class="search_options__subname search_options__subname--et">(вылет</span>
+                        <span class="search_options__subname search_options__subname--et2">диска):</span>
+                    </dt>
+                    <dd class="search_options_variant">
+                        <select name="model" class="search_options_variant_select search_options_variant--et">
+                            <option value="12" selected>12</option>
+                            <option value="13">13</option>
+                            <option value="14">14</option>
+                        </select>
+                    </dd>
+                </dl>
+
+            </form>
             <a href="#" class="search_link search_link-discs">поиск...</a>
         </section>
 
 
     </div>
 
-    <aside class="catalog">
+    <div class="content_wrapper">
+        <aside class="catalog">
+            <div class="catalog_name">каталог продукции</div>
 
-    </aside>
+        </aside>
 
-    <aside class="brands">
+        <aside class="brands">
 
-    </aside>
+        </aside>
 
-    <main>
+        <main>
 
-    </main>
+        </main>
+    </div>
 
     <footer>
 
